# GREEN-LINTER

./: .gitignore  Cargo.toml  README.md
data/: carbon_intensity.json
src/: co2_estimator.rs  config.rs  main.rs  project_scanner.rs  report_printer.rs
src/eco_checks/: build_artifacts.rs  docker_waste.rs  heavy_deps.rs  lockfile_audit.rs  mod.rs
